restaurant-gitops/base/platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: restaurant-demo-mtls
  namespace: restaurant-demo
spec:
  mtls:
    mode: STRICT
